# aoc-2023

./: .gitignore  CNAME  README.md  gen_adocs.py  index.html  input  makedocs  makedocs.py  user-RJPlog.html  user-daniel.html  user-peter.html
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  nginx.conf
.github/workflows/: gh-pages.yml
day00/cpp/peter/: CMakeLists.txt  README.adoc  solution.cpp
day00/kotlin/peter/: .gitignore  README.adoc  solution.kt
day00/rust/peter/: Cargo.toml  README.adoc
day01/haskell/peter/: README.adoc  solution.hs
day01/kotlin/RJPlog/: day2301_1_2.kt
day01/python/daniel/: solution.py
day01/rust/daniel/: Cargo.toml
day01/rust/peter/: Cargo.toml  README.adoc
day02/haskell/peter/: README.adoc  solution.hs
day02/kotlin/RJPlog/: day02_1_2.kt
day02/rust/daniel/: Cargo.toml
day02/rust/peter/: Cargo.toml  README.adoc
day03/kotlin/RJPlog/: day2303_1_2.kt
day03/python/daniel/: solution.py
day03/rust/peter/: Cargo.toml  README.adoc
day04/kotlin/RJPlog/: day2304_1_2.kt
day04/python/daniel/: solution.py
day04/rust/peter/: Cargo.toml  README.adoc
day05/kotlin/RJPlog/: day2305_1_2.kt
day05/python/daniel/: solution.py  test_solution.py
day05/rust/peter/: Cargo.toml  README.adoc
day06/kotlin/RJPlog/: day2306_1_2.kt
day06/python/daniel/: solution.py
day06/rust/peter/: Cargo.toml  README.adoc
day06/rust/peter/benches/: day06.rs
day06/rust/peter/src/: lib.rs  main.rs
day07/kotlin/RJPlog/: day2307_1_2.kt
day07/python/daniel/: solution.py
day07/rust/peter/: Cargo.toml  README.adoc
day07/rust/peter/benches/: day07.rs
day07/rust/peter/src/: lib.rs  main.rs
day08/kotlin/RJPlog/: day2308_1_2.kt
day08/python/daniel/: solution.py
day08/rust/peter/: Cargo.toml  README.adoc
day08/rust/peter/src/: lib.rs  main.rs
day09/kotlin/RJPlog/: day2309_1_2.kt
day09/python/daniel/: solution.py
day09/rust/peter/: Cargo.toml  README.adoc
day09/rust/peter/benches/: day09.rs
day09/rust/peter/src/: lib.rs  main.rs
day10/kotlin/RJPlog/: day2310_1_2.kt
day10/python/daniel/: solution.py
day10/rust/peter/: Cargo.toml  README.adoc
day11/kotlin/RJPlog/: day2311_1_2.kt
day11/python/daniel/: solution.py
day11/rust/peter/: Cargo.toml  README.adoc
day11/rust/peter/benches/: day11.rs
day11/rust/peter/examples/: example_gen.rs
day11/rust/peter/src/: lib.rs  main.rs
day12/python/daniel/: solution.py
day12/rust/peter/: Cargo.toml  README.adoc
day12/rust/peter/benches/: day12.rs
day12/rust/peter/src/: lib.rs  main.rs
day13/kotlin/RJPlog/: day2313_1_2.kt
day13/python/daniel/: solution.py
day13/rust/peter/: Cargo.toml  README.adoc
day14/kotlin/RJPlog/: day2314_1_2.kt
day14/rust/peter/: Cargo.toml  README.adoc
day15/kotlin/RJPlog/: day2315_1_2.kt
day15/python/daniel/: solution.py
day15/rust/peter/: Cargo.toml  README.adoc
day16/kotlin/RJPlog/: day2316_1_2.kt
day16/python/daniel/: solution.py
day16/rust/peter/: Cargo.toml  README.adoc
day17/rust/peter/: Cargo.toml  README.adoc
day18/rust/peter/: Cargo.toml  README.adoc
day19/rust/peter/: Cargo.toml  README.adoc
day20/rust/peter/: Cargo.toml  README.adoc
day21/rust/peter/: Cargo.toml  README.adoc
day22/rust/peter/: Cargo.toml  README.adoc
day23/rust/peter/: Cargo.toml  README.adoc
day23/rust/peter/benches/: day23.rs
day23/rust/peter/src/: lib.rs  main.rs
day24/rust/peter/: Cargo.toml  README.adoc
day24/rust/peter/geometry/: plot_planes.gnu
day24/rust/peter/src/: geometric.rs  lib.rs  main.rs
day25/rust/peter/: Cargo.toml  README.adoc
inputs/: README.md
libs/: README.md
site/: README.md  gen_adocs.py
site/docinfo/: docinfo-footer.html  docinfo-header.html
(+45 files in other folders)
