[package]
name = "mr-kaffee-2023-06"
description = "Solution to AoC 2023/6, http://adventofcode.com/2023/day/6/"
authors = ["Peter Wieland <peter@die-wielands.net>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dev-dependencies]

criterion = "0.3"

[dependencies]

[features]

play_math = []
play_1_smart = []
play_2_naive = []

[[bench]]
name = "day06"
harness = false
