[package]
name = "mr-kaffee-2023-07"
description = "Solution to AoC 2023/7, http://adventofcode.com/2023/day/7/"
authors = ["Peter Wieland <peter@die-wielands.net>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dev-dependencies]

criterion = "0.3"

[dependencies]

[[bench]]
name = "day07"
harness = false
