[package]
name = "mr-kaffee-2023-09"
description = "Solution to AoC 2023/9, http://adventofcode.com/2023/day/9/"
authors = ["Peter Wieland <peter@die-wielands.net>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dev-dependencies]

criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]

[features]

reverse = []
no-sign = []

[[bench]]
name = "day09"
harness = false
