[package]
name = "mr-kaffee-2023-11"
description = "Solution to AoC 2023/11, http://adventofcode.com/2023/day/11/"
authors = ["Peter Wieland <peter@die-wielands.net>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dev-dependencies]

criterion = { version = "0.4", features = ["html_reports"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"

[dependencies]

[[bench]]
name = "day11"
harness = false
