[package]
name = "mr-kaffee-2023-12"
description = "Solution to AoC 2023/12, http://adventofcode.com/2023/day/12/"
authors = ["Peter Wieland <peter@die-wielands.net>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]

[features]

shared-cache = []

[dev-dependencies]

criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "day12"
harness = false
