[package]
name = "mr-kaffee-2023-24"
description = "Solution to AoC 2023/24, http://adventofcode.com/2023/day/24/"
authors = ["Peter Wieland <peter@die-wielands.net>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]

mr-kaffee-utils = { path = "../../../libs/rust/peter/utils/" }

[features]

geometric = []
